Añadido conexiones DataSource JNDI

--- a/ProyectoPrueba/src/es/uc3m/tiw/persistencia/persistencia.properties
+++ b/ProyectoPrueba/src/es/uc3m/tiw/persistencia/persistencia.properties
@@ -5,6 +5,9 @@ usuario=root
 clave=admin
 driver=com.mysql.jdbc.Driver
 
+#cadena de conexión para el DataSource JNDI
+datasource=jdbc/tiw
+
 #sentencias para usuario
 seleccionarTodosUsuarios=SELECT * FROM usuario
 seleccionarUsuarioPK=SELECT * FROM usuario WHERE id=?
